--- a/x360ce.Engine/x360ce.Engine.csproj
+++ b/x360ce.Engine/x360ce.Engine.csproj
@@ -111,6 +111,7 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Common\BoardInfo.cs" />
@@ -194,6 +195,7 @@
     <Compile Include="JocysCom\Drawing\Effects\Grayscale.cs" />
     <Compile Include="JocysCom\Drawing\Effects\Transparent.cs" />
     <Compile Include="JocysCom\Extensions\IQueryable.cs" />
+    <Compile Include="JocysCom\Files\ZipStorer.cs" />
     <Compile Include="JocysCom\IO\DeviceDetector.cs" />
     <Compile Include="JocysCom\IO\DeviceDetectorEventArgs.cs" />
     <Compile Include="JocysCom\IO\DeviceDetectorForm.cs">
@@ -365,6 +367,7 @@
   <ItemGroup>
     <Content Include="JocysCom\Extensions\ReadMe.txt" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>
