--- a/x360ce.Web/Web.config
+++ b/x360ce.Web/Web.config
@@ -155,14 +155,16 @@
 				</rule>
 				<rule name="Redirect" stopProcessing="true">
 					<match url="^Redirect/(.*)" />
-					<conditions logicalGrouping="MatchAll">
-					</conditions>
+					<conditions logicalGrouping="MatchAll" />
 					<action type="Redirect" url="http://{R:1}" redirectType="Permanent" />
+				</rule>
+				<rule name="DebugTestFiles" stopProcessing="true">
+					<match url="^Files/(.*beta\.zip)" />
+					<conditions logicalGrouping="MatchAll" />
 				</rule>
 				<rule name="RedirectFiles" stopProcessing="true">
 					<match url="^Files/(.*)" />
-					<conditions logicalGrouping="MatchAll">
-					</conditions>
+					<conditions logicalGrouping="MatchAll" />
 					<action type="Redirect" url="https://github.com/x360ce/x360ce/blob/master/x360ce.Web/Files/{R:1}?raw=true" />
 				</rule>
 				<!--<rule name="To https://github.com/x360ce/x360ce" stopProcessing="true">
