--- a/x360ce.App.Beta/x360ce.App.Beta.csproj
+++ b/x360ce.App.Beta/x360ce.App.Beta.csproj
@@ -239,7 +239,8 @@
     <Compile Include="Common\DeadZoneControlsLink.cs" />
     <Compile Include="Common\DeviceObjectItem.cs" />
     <Compile Include="Common\DInput\DInputHelper.cs" />
-    <Compile Include="Common\DInput\DInputHelper.DeviceDetector.cs" />
+    <Compile Include="Common\DInput\DInputHelper.UpdateDiDevices.cs" />
+    <Compile Include="Common\DInput\DInputHelper.UpdateDiStates.cs" />
     <Compile Include="Common\DirectInputState.cs" />
     <Compile Include="Common\Downloader.cs" />
     <Compile Include="Common\DownloaderEventArgs.cs" />
