--- a/x360ce.Engine/x360ce.Engine.csproj
+++ b/x360ce.Engine/x360ce.Engine.csproj
@@ -316,6 +316,27 @@
     <Compile Include="JocysCom\Win32\WIN32_FIND_DATA.cs" />
     <Compile Include="JocysCom\Win32\WinNT.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SharpDX.XInput\BatteryDeviceType.cs" />
+    <Compile Include="SharpDX.XInput\BatteryInformation.cs" />
+    <Compile Include="SharpDX.XInput\BatteryLevel.cs" />
+    <Compile Include="SharpDX.XInput\BatteryType.cs" />
+    <Compile Include="SharpDX.XInput\Capabilities.cs" />
+    <Compile Include="SharpDX.XInput\CapabilityFlags.cs" />
+    <Compile Include="SharpDX.XInput\Controller.cs" />
+    <Compile Include="SharpDX.XInput\DeviceQueryType.cs" />
+    <Compile Include="SharpDX.XInput\DeviceSubType.cs" />
+    <Compile Include="SharpDX.XInput\DeviceType.cs" />
+    <Compile Include="SharpDX.XInput\Gamepad.cs" />
+    <Compile Include="SharpDX.XInput\GamepadButtonFlags.cs" />
+    <Compile Include="SharpDX.XInput\GamepadKeyCode.cs" />
+    <Compile Include="SharpDX.XInput\Keystroke.cs" />
+    <Compile Include="SharpDX.XInput\KeyStrokeFlags.cs" />
+    <Compile Include="SharpDX.XInput\ResultCode.cs" />
+    <Compile Include="SharpDX.XInput\State.cs" />
+    <Compile Include="SharpDX.XInput\ThumbIndex.cs" />
+    <Compile Include="SharpDX.XInput\UserIndex.cs" />
+    <Compile Include="SharpDX.XInput\Vibration.cs" />
+    <Compile Include="SharpDX.XInput\XInput.cs" />
     <Compile Include="Win32\BIND_OPTS3.cs" />
     <Compile Include="Win32\BSF.cs" />
     <Compile Include="Win32\BSM.cs" />
