State code updated.

--- a/x360ce.App.Beta/x360ce.App.Beta.csproj
+++ b/x360ce.App.Beta/x360ce.App.Beta.csproj
@@ -177,9 +177,10 @@
     <Compile Include="Common\DeviceObjectItem.cs" />
     <Compile Include="Common\DInput\DInputHelper.cs" />
     <Compile Include="Common\DInput\DInputHelper.Step1.UpdateDevices.cs" />
-    <Compile Include="Common\DInput\DInputHelper.Step2.UpdateStates.cs" />
-    <Compile Include="Common\DInput\DInputHelper.Step3.CombineXiStates.cs" />
-    <Compile Include="Common\DInput\DInputHelper.Step4.VirtualDevice.cs" />
+    <Compile Include="Common\DInput\DInputHelper.Step2.UpdateDiStates.cs" />
+    <Compile Include="Common\DInput\DInputHelper.Step4.CombineXiStates.cs" />
+    <Compile Include="Common\DInput\DInputHelper.Step3.UpdateXiStates.cs" />
+    <Compile Include="Common\DInput\DInputHelper.Step5.VirtualDevice.cs" />
     <Compile Include="Common\Downloader.cs" />
     <Compile Include="Common\DownloaderEventArgs.cs" />
     <Compile Include="Common\DownloaderParams.cs" />
