Mapping algorithms updated

--- a/x360ce.Engine/x360ce.Engine.csproj
+++ b/x360ce.Engine/x360ce.Engine.csproj
@@ -315,6 +315,10 @@
     <Compile Include="JocysCom\Win32\TOKEN_MANDATORY_LABEL.cs" />
     <Compile Include="JocysCom\Win32\WIN32_FIND_DATA.cs" />
     <Compile Include="JocysCom\Win32\WinNT.cs" />
+    <Compile Include="Maps\ButtonMap.cs" />
+    <Compile Include="Maps\SettingName.cs" />
+    <Compile Include="Maps\SettingsConverter.cs" />
+    <Compile Include="Maps\SettingType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SharpDX.XInput\BatteryDeviceType.cs" />
     <Compile Include="SharpDX.XInput\BatteryInformation.cs" />
