--- a/x360ce.App.Beta/x360ce.App.Beta.csproj
+++ b/x360ce.App.Beta/x360ce.App.Beta.csproj
@@ -204,7 +204,12 @@
     <Compile Include="Common\WarningItem.cs" />
     <Compile Include="Common\ControlHelper.cs" />
     <Compile Include="Common\WinVerify.cs" />
-    <Compile Include="Common\CustomToolStripSystemRenderer.cs" />
+    <Compile Include="Controls\IssuesUserControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\IssuesUserControl.Designer.cs">
+      <DependentUpon>IssuesUserControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="Controls\LogUserControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -375,12 +380,6 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Common\SettingsMapItem.cs" />
-    <Compile Include="Forms\WarningsForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Forms\WarningsForm.Designer.cs">
-      <DependentUpon>WarningsForm.cs</DependentUpon>
-    </Compile>
     <Compile Include="Issues\DirectXIssue.cs" />
     <Compile Include="vBox\vXboxInterface.cs" />
     <EmbeddedResource Include="Controls\AboutControl.resx">
@@ -389,6 +388,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\AxisToButtonUserControl.resx">
       <DependentUpon>AxisToButtonUserControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\IssuesUserControl.resx">
+      <DependentUpon>IssuesUserControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\LogUserControl.resx">
       <DependentUpon>LogUserControl.cs</DependentUpon>
@@ -463,9 +465,6 @@
       <Generator>PublicResXFileCodeGenerator</Generator>
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Forms\WarningsForm.resx">
-      <DependentUpon>WarningsForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="app.config">
       <SubType>Designer</SubType>
