Issue solver updated.

--- a/x360ce.App.Beta/x360ce.App.Beta.csproj
+++ b/x360ce.App.Beta/x360ce.App.Beta.csproj
@@ -374,6 +374,7 @@
     <Compile Include="Issues\LeakDetectorIssue.cs" />
     <Compile Include="Issues\MdkIssue.cs" />
     <Compile Include="Issues\IniFileIssue.cs" />
+    <Compile Include="Issues\VirtualDeviceDriverIssue.cs" />
     <Compile Include="MainForm.Tray.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
       <SubType>Form</SubType>
