Test state updates. Log fixes.

--- a/x360ce.Engine/x360ce.Engine.csproj
+++ b/x360ce.Engine/x360ce.Engine.csproj
@@ -249,6 +249,7 @@
     <Compile Include="JocysCom\Runtime\EmailResult.cs" />
     <Compile Include="JocysCom\Runtime\Helper.cs" />
     <Compile Include="JocysCom\Runtime\LogHelper.cs" />
+    <Compile Include="JocysCom\Runtime\LogHelper.Exception.cs" />
     <Compile Include="JocysCom\Runtime\LogHelper.Mail.cs" />
     <Compile Include="JocysCom\Runtime\Serializer.cs" />
     <Compile Include="JocysCom\Security\BuildInRoles.cs" />
