Trying to optimize XInput classes.

--- a/x360ce.Engine/x360ce.Engine.csproj
+++ b/x360ce.Engine/x360ce.Engine.csproj
@@ -337,12 +337,15 @@
     <Compile Include="SharpDX.XInput\Capabilities.cs" />
     <Compile Include="SharpDX.XInput\CapabilityFlags.cs" />
     <Compile Include="SharpDX.XInput\Controller.cs" />
+    <Compile Include="SharpDX.XInput\Controller.x360ce.cs" />
     <Compile Include="SharpDX.XInput\DeviceQueryType.cs" />
     <Compile Include="SharpDX.XInput\DeviceSubType.cs" />
     <Compile Include="SharpDX.XInput\DeviceType.cs" />
     <Compile Include="SharpDX.XInput\Gamepad.cs" />
     <Compile Include="SharpDX.XInput\GamepadButtonFlags.cs" />
     <Compile Include="SharpDX.XInput\GamepadKeyCode.cs" />
+    <Compile Include="SharpDX.XInput\IXInput.cs" />
+    <Compile Include="SharpDX.XInput\IXinput.x360ce.cs" />
     <Compile Include="SharpDX.XInput\Keystroke.cs" />
     <Compile Include="SharpDX.XInput\KeyStrokeFlags.cs" />
     <Compile Include="SharpDX.XInput\ResultCode.cs" />
@@ -350,7 +353,12 @@
     <Compile Include="SharpDX.XInput\ThumbIndex.cs" />
     <Compile Include="SharpDX.XInput\UserIndex.cs" />
     <Compile Include="SharpDX.XInput\Vibration.cs" />
-    <Compile Include="SharpDX.XInput\XInput.cs" />
+    <Compile Include="SharpDX.XInput\XInput13.cs" />
+    <Compile Include="SharpDX.XInput\XInput13.x360ce.cs" />
+    <Compile Include="SharpDX.XInput\XInput14.cs" />
+    <Compile Include="SharpDX.XInput\XInput14.x360ce.cs" />
+    <Compile Include="SharpDX.XInput\XInput910.cs" />
+    <Compile Include="SharpDX.XInput\XInput910.x360ce.cs" />
     <Compile Include="Win32\BIND_OPTS3.cs" />
     <Compile Include="Win32\BSF.cs" />
     <Compile Include="Win32\BSM.cs" />
