Implemented updates with HiResTimer class. Now, application use 0.0-0.5% CPU when minimized and updating virtual controllers at 1000 Hz. Next step is to test with actual game like Ghost Recon Wildlands. If it works then it will be suitable for public test (alpha release).

--- a/x360ce.Engine/x360ce.Engine.csproj
+++ b/x360ce.Engine/x360ce.Engine.csproj
@@ -180,6 +180,7 @@
     <Compile Include="JocysCom\Common\GuidEnum.cs" />
     <Compile Include="JocysCom\Common\GuidValueAttribute.cs" />
     <Compile Include="JocysCom\Common\Helper.cs" />
+    <Compile Include="JocysCom\Common\HiResDateTime.cs" />
     <Compile Include="JocysCom\Common\HiResTimer.cs" />
     <Compile Include="JocysCom\Common\ItemType.cs" />
     <Compile Include="JocysCom\Common\LinkItem.cs" />
